--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   test:
     machine:
-      image: circleci/classic:201808-01
+      image: ubuntu-2204:2024.05.1
       docker_layer_caching: true
     working_directory: ~/repo
           
@@ -19,7 +19,7 @@ jobs:
             sleep 5
             sudo rm /var/lib/dpkg/lock
             sudo dpkg --configure -a
-            sudo apt-get install python3.5
+            sudo apt-get install python3.12
             sleep 5
             python -m pip install -r requirements.txt
         
@@ -37,7 +37,7 @@ jobs:
   build:
   
     machine:
-      image: circleci/classic:201808-01
+      image: ubuntu-2204:2024.05.1
       docker_layer_caching: true
     working_directory: ~/repo
           
@@ -50,7 +50,7 @@ jobs:
  
   push:
     machine:
-      image: circleci/classic:201808-01
+      image: ubuntu-2204:2024.05.1
       docker_layer_caching: true
     working_directory: ~/repo
     steps:
