--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,8 @@ jobs:
             sudo rm /var/lib/dpkg/lock
             sudo dpkg --configure -a
             sudo apt-get install python3
-            sudo apt-get install python-setuptools
+            sudo apt-get install python-
+            sudo apt-get install --reinstall python-pkg-resources
             sleep 5
             python -m pip install -r requirements.txt
         
