--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
             sudo apt-get install python-setuptools
             sudo apt-get install --reinstall python-pkg-resources
             sleep 5
-            python -m pip install -r requirements.txt
+            python -m pip3 install -r requirements.txt
         
       # run tests!
       # this example uses Django's built-in test-runner
