--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2
 jobs:
   test:
+    requires:
+     - setuptools
     machine:
       image: ubuntu-2004:2024.05.1
       docker_layer_caching: true
