--- a/k8s/rsvp.yaml
+++ b/k8s/rsvp.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: rsvp-app
-        image: sergeianikeev/rsvpapp:596624232dbb23ab2c9fb48a1af90a9435b53419
+        image: nkhare/rsvpapp:dev
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
